# MULTIMODEL

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
scripts/: check_system.py  smoke_test_chat.py
src/multimodel_rag/: __init__.py
src/multimodel_rag/app/: __init__.py  streamlit_app.py
src/multimodel_rag/core/: __init__.py  system.py
src/multimodel_rag/formatting/: __init__.py  advanced_formatter.py
src/multimodel_rag/guardrails/: __init__.py  self_rag_validator.py
src/multimodel_rag/processing/: __init__.py  equation_ocr.py  pdf_processor.py  specialized_chunker.py
src/multimodel_rag/prompts/: __init__.py
src/multimodel_rag/retrieval/: __init__.py  vector_store.py
src/multimodel_rag/utils/: __init__.py
tests/: test_architecture.py
