[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodel-rag"
version = "0.1.0"
description = "Refactored Multi-Modal RAG project with a VS Code friendly src layout"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
src = ["src", "tests"]
